Fixed The Break Points

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fa" dir="rtl">
 
 <head>
     <meta charset="UTF-8">
@@ -9,10 +9,173 @@
     <link rel="stylesheet" href="./css/main.css">
 </head>
 
-<body>
+<body class="font-vazir bg-slate-900">
+    <div class="container m-auto">
+        <div class="bg-slate-900 px-4 lg:px-0">
+            <div class="text-center pt-4">
+                <h2 class="text-lg font-extrabold text-gray-300 font-semibold">قیمت ها</h2>
+                <p class=" font-bold lg:text-5xl text-3xl text-white">لیست بهترین پلن ها برای خرید از این سایت</p>
+                <p class="text-gray-300 text-lg lg:text-xl max-w-3xl mx-auto pt-4">Lorem ipsum dolor, sit amet consectetur
+                    adipisicing
+                    elit. Aut, nostrum vitae officiis tempora odit molestias odio amet enim deleniti ipsa dolores quia!
+                    Quae
+                    eum facere dicta qui earum omnis hic?</p>
+            </div>
+            <div class="max-w-7xl mx-auto px-2 md:px-8 mt-16 pb-20">
+                <div class="lg:grid lg:grid-cols-7 space-y-10 lg:space-y-0">
+                    <div class="col-start-1 col-end-3 row-start-2 row-end-3">
+                        <div class="bg-white lg:rounded-r-lg rounded-lg overflow-hidden">
+                            <div class="flex items-center justify-center flex-col py-10 space-y-5">
+                                <span class="text-xl font-semibold">پلن شروع</span>
+                                <div class="flex items-center">
+                                    <span class="ml-2 text-2xl">تومان</span>
+                                    <span class="text-6xl font-bold ml-2">349</span>
+                                    <span class="text-gray-500 text-2xl">/ ماهانه</span>
+                                </div>
 
-    <h1 class="font-bold text-2xl bg-slate-900 p-10 text-center animate-pulse text-white">Hello World</h1>
+                            </div>
+                            <div class="bg-gray-300 p-12 border-t-2 border-gray-500">
+                                <ul class=" space-y-3">
+                                    <li class="flex">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="22.903" height="19.395">
+                                            <path
+                                                d="M22.903 2.828 20.075 0 6.641 13.435 3.102 9.09 0 11.616l6.338 7.779L22.903 2.828z" />
+                                        </svg>
+                                        <p class="mr-3 text-gray-500">ویژگی عالی</p>
+                                    </li>
+                                    <li class="flex">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="22.903" height="19.395">
+                                            <path
+                                                d="M22.903 2.828 20.075 0 6.641 13.435 3.102 9.09 0 11.616l6.338 7.779L22.903 2.828z" />
+                                        </svg>
+                                        <p class="mr-3 text-gray-500">ویژگی عالی</p>
+                                    </li>
+                                    <li class="flex">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="22.903" height="19.395">
+                                            <path
+                                                d="M22.903 2.828 20.075 0 6.641 13.435 3.102 9.09 0 11.616l6.338 7.779L22.903 2.828z" />
+                                        </svg>
+                                        <p class="mr-3 text-gray-500">ویژگی عالی</p>
+                                    </li>
+                                </ul>
+                                <div class="flex justify-center">
+                                    <a href="#"
+                                        class="bg-white rounded-lg font-bold shadow text-center p-2 w-full mt-5 hover:bg-gray-50">خرید
+                                        پلن</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-start-3 col-end-6 z-10 row-start-1 row-end-4">
+                        <div class="bg-white relative rounded-lg ring-2 ring-indigo-800 ">
+                            <div class="flex justify-center w-full ">
+                                <span class=" rounded-full bg-indigo-800 px-4 py-1 text-white absolute -top-5">
+                                    پرفروش ترین
+                                </span>
+                            </div>
+                            <div class="flex items-center justify-center flex-col py-10  space-y-5">
+                                <span class="text-xl font-semibold">پلن رشد</span>
+                                <div class="flex items-center">
+                                    <span class="ml-2 text-2xl">تومان</span>
+                                    <span class="text-6xl font-bold ml-2">149</span>
+                                    <span class="text-gray-500 text-2xl">/ ماهانه</span>
+                                </div>
 
+                            </div>
+                            <div class="bg-gray-300 p-12 rounded-b-lg border-t-2 border-gray-500">
+                                <ul class=" space-y-3">
+                                    <li class="flex">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="22.903" height="19.395">
+                                            <path
+                                                d="M22.903 2.828 20.075 0 6.641 13.435 3.102 9.09 0 11.616l6.338 7.779L22.903 2.828z" />
+                                        </svg>
+                                        <p class="mr-3 text-gray-500">ویژگی عالی</p>
+                                    </li>
+                                    <li class="flex">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="22.903" height="19.395">
+                                            <path
+                                                d="M22.903 2.828 20.075 0 6.641 13.435 3.102 9.09 0 11.616l6.338 7.779L22.903 2.828z" />
+                                        </svg>
+                                        <p class="mr-3 text-gray-500">ویژگی عالی</p>
+                                    </li>
+                                    <li class="flex">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="22.903" height="19.395">
+                                            <path
+                                                d="M22.903 2.828 20.075 0 6.641 13.435 3.102 9.09 0 11.616l6.338 7.779L22.903 2.828z" />
+                                        </svg>
+                                        <p class="mr-3 text-gray-500">ویژگی عالی</p>
+                                    </li>
+                                    <li class="flex">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="22.903" height="19.395">
+                                            <path
+                                                d="M22.903 2.828 20.075 0 6.641 13.435 3.102 9.09 0 11.616l6.338 7.779L22.903 2.828z" />
+                                        </svg>
+                                        <p class="mr-3 text-gray-500">ویژگی عالی</p>
+                                    </li>
+                                    <li class="flex">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="22.903" height="19.395">
+                                            <path
+                                                d="M22.903 2.828 20.075 0 6.641 13.435 3.102 9.09 0 11.616l6.338 7.779L22.903 2.828z" />
+                                        </svg>
+                                        <p class="mr-3 text-gray-500">ویژگی عالی</p>
+                                    </li>
+                                </ul>
+                                <div class="flex justify-center">
+                                    <a href="#"
+                                        class="bg-indigo-800 rounded-lg font-bold shadow text-center text-white p-2 w-full mt-5 hover:bg-indigo-600">خرید
+                                        پلن</a>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="col-start-6 col-end-8 row-start-2 row-end-3">
+                        <div class="bg-white lg:rounded-l-lg rounded-lg">
+                            <div class="flex items-center justify-center flex-col py-10  space-y-5 ">
+                                <span class="text-xl font-semibold">پلن استارتاپی</span>
+                                <div class="flex items-center">
+                                    <span class="ml-2 text-2xl">تومان</span>
+                                    <span class="text-6xl font-bold ml-2">74</span>
+                                    <span class="text-gray-500 text-2xl">/ ماهانه</span>
+                                </div>
+
+                            </div>
+                            <div class="bg-gray-300 p-12 lg:rounded-bl-lg rounded-lg border-t-2 border-gray-500">
+                                <ul class=" space-y-3 ">
+                                    <li class="flex">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="22.903" height="19.395">
+                                            <path
+                                                d="M22.903 2.828 20.075 0 6.641 13.435 3.102 9.09 0 11.616l6.338 7.779L22.903 2.828z" />
+                                        </svg>
+                                        <p class="mr-3 text-gray-500">ویژگی عالی</p>
+                                    </li>
+                                    <li class="flex">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="22.903" height="19.395">
+                                            <path
+                                                d="M22.903 2.828 20.075 0 6.641 13.435 3.102 9.09 0 11.616l6.338 7.779L22.903 2.828z" />
+                                        </svg>
+                                        <p class="mr-3 text-gray-500">ویژگی عالی</p>
+                                    </li>
+                                    <li class="flex">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="22.903" height="19.395">
+                                            <path
+                                                d="M22.903 2.828 20.075 0 6.641 13.435 3.102 9.09 0 11.616l6.338 7.779L22.903 2.828z" />
+                                        </svg>
+                                        <p class="mr-3 text-gray-500">ویژگی عالی</p>
+                                    </li>
+                                </ul>
+                                <div class="flex justify-center">
+                                    <a href="#"
+                                        class="bg-white rounded-lg font-bold shadow text-center p-2 w-full mt-5 hover:bg-gray-50">خرید
+                                        پلن</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
